--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=p, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque optio voluptas quos ducimus et nesciunt facere voluptatibus iste sapiente incidunt eligendi at veniam, officia eius. Blanditiis earum nulla explicabo animi.</P>
-    <table>
-        <thead>
-            <tr>
-                <td>zain</td>
-            </tr>
-        </thead>
-    </table>
+    <h1>This my First website </h1>
+    <h2>This my First website </h2>
+    <h3>This my First website</h3>
+    <h4>This my First website</h4>
+    <h5>This my First website</h5>
+    <h6>This my First website</h6>
+    <i>This my First website</i>
+    <b>This my First website</b>
+    <u>This my First website</u>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis assumenda ex maiores quod cum, sit natus. Dolorum, quo. Eum ullam magni laboriosam eveniet repellat exercitationem consectetur veritatis ratione inventore quos.</p>
+    sprightly-sunflower-a2445c
+sprightly-sunflower-a2445c.netlify.app
 </body>
 </html>
