--- a/index.html
+++ b/index.html
@@ -6,17 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This my First website </h1>
-    <h2>This my First website </h2>
-    <h3>This my First website</h3>
-    <h4>This my First website</h4>
-    <h5>This my First website</h5>
-    <h6>This my First website</h6>
-    <i>This my First website</i>
-    <b>This my First website</b>
-    <u>This my First website</u>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis assumenda ex maiores quod cum, sit natus. Dolorum, quo. Eum ullam magni laboriosam eveniet repellat exercitationem consectetur veritatis ratione inventore quos.</p>
-    sprightly-sunflower-a2445c
-sprightly-sunflower-a2445c.netlify.app
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa molestias consectetur dolore deserunt aliquam quisquam rem necessitatibus hic tenetur, dolorum inventore, iusto officia, optio voluptatibus aspernatur modi. Non, amet aspernatur?</p>
 </body>
 </html>
